# c-engine

./: CMakeLists.txt  build.sh
src/: log.cpp  main.cpp  math.cpp
